# turris-auth

./: .coveragerc  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.adoc  cgiauth.py  hatch_build.py  install.sh  lighttpd.conf  login.html.j2  magnet.lua  pyproject.toml  set-turris-auth  setup.py  tox.ini
lighttpd_turris_auth/: __main__.py  cookie.py  password.py
lighttpd_turris_auth/server/: __main__.py  config.py  wsgi.py
lighttpd_turris_auth/server/templates/: login.html.j2
tests/luci/: test_acl.py
tests/luci/acl.d/: luci-base.json
turris_auth/: __init__.py  cookie.py  luci.py  password.py
turris_auth/server/: __init__.py  __main__.py  config.py  foris_lang.py  pages.py  wsgi.py
turris_auth/server/locale/: babel.cfg  turris_auth.server.pot
turris_auth/server/locale/cs/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/de/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/es/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/fr/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/la/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/nb/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/nb_NO/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/nl/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/pl/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/locale/ru/LC_MESSAGES/: turris_auth.server.po
turris_auth/server/resources/: app.css  custom.css
turris_auth/server/templates/: login.html.j2
(+2 files in other folders)
